first dirty implemantion of the TextEditor integration

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,4 +1,8 @@
-.bbcodeFiveStarRating {
+.bbcode-fivestar-rating {
   color: @secondary-color;
   white-space: nowrap;
+}
+
+.Composer .Composer-footer .item-fivestar-rating {
+  margin-right: 0;
 }
