change the star-color with CSS properties

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,5 +1,9 @@
+:root {
+  --bbcode-fivestar-rating-color: @secondary-color;
+}
+
 .bbcode-fivestar-rating {
-  color: @secondary-color;
+  color: var(--bbcode-fivestar-rating-color);
   white-space: nowrap;
 }
 
